// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when feetype not passed total 1`] = `
<div
  className="flex layout-row layout-align-end-center"
>
  <p />
</div>
`;

exports[`when feetype passed edited total 1`] = `
<div
  className="flex layout-row layout-align-end-center"
>
  <p>
    600.00
    USD
  </p>
</div>
`;

exports[`when feetype passed total 1`] = `
<div
  className="flex layout-row layout-align-end-center"
>
  <p>
    500.00
    EUR
  </p>
</div>
`;
